finally solved that vertical alignment thing

--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,15 @@
     --bg2: #232323;
 }
 
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body {
     background-color: var(--bg);
+    height: 100%;
+    width: 100%;
 }
 
 ::selection {
@@ -47,8 +54,7 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    padding: 20%;
-    height: 100%;
+    height: 80%;
     width: 100%;
 }
 
@@ -123,7 +129,6 @@ body {
     background: var(--bg2);
     border-radius: 4px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, .25);
-    overflow: hidden;
     display: flex;
     justify-content: space-around;
     margin: 2em auto;
